--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <i data-feather="target" class="fea icon-md"></i>
                     </div>
                     <div class="services-texts">
-                        <h3 class="title mb-3">Pixel perfect</h3>
+                        <h3 class="title mb-3">Perfect Pixel</h3>
                         <p class="text-light-muted mb-4">Тестирование user-interface front-end</p>
                     </div>
                 </div>
